# undistort-ios

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  Makefile  README.md  build.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
scripts/: lint-path.sh
src/cpp/: CMakeLists.txt
src/cpp/include/: undistorter.hpp
src/cpp/src/: undistorter.cpp
src/cython/: undistort_cy.pyx
src/rust/: lib.rs
tests/: conftest.py  test_implementations.py
tests/data/: test_calibration_data.json
undistort_ios/: benchmark.py  numpy_impl.py  python_impl.py
undistort_ios/cpp/: __init__.py
undistort_ios/cython/: __init__.py
undistort_ios/rust/: __init__.py  compiled.pyi
